--- a/Lesson6/index.html
+++ b/Lesson6/index.html
@@ -6,10 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <body>
     <div id="app">
-<p>You can see me</p>
-<p>You can also see me?</p>
+<p v-if="show">You can see me</p>
+<p v-else>You can also see me?</p>
+<template v-if='show'>
+        <div>
+            <h1>this is heading</h1>
+            <div>Inside a template</div>
+        </div>
+    </template>
+<button @click='show = !show'>Switch</button>
+
     </div>
     
 </body>
